--- a/pom.xml
+++ b/pom.xml
@@ -52,16 +52,20 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-mongodb</artifactId>
-      <version>4.0.4</version>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
       <version>3.0.5</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>4.9.1</version>
+    </dependency>
+    <!--    <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-mongodb</artifactId>
+          <version>3.0.5</version>
+        </dependency> -->
   </dependencies>
 
   <build>
