--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
       <artifactId>mongodb-driver-sync</artifactId>
       <version>4.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>2.3.2</version>
+    </dependency>
     <!--    <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-mongodb</artifactId>
