--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.mousuf.rarestem/com.mousuf.rarestem.HelloApplication</mainClass>
+              <mainClass>com.mousuf.rarestem/com.mousuf.rarestem.Main</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
