--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,17 @@
       <artifactId>dotenv-java</artifactId>
       <version>2.3.2</version>
     </dependency>
-    <!--    <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-data-mongodb</artifactId>
-          <version>3.0.5</version>
-        </dependency> -->
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>test</scope>
+      </dependency>
+      <!--    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>3.0.5</version>
+          </dependency> -->
   </dependencies>
 
   <build>
